Upgrade to Spring Boot 3 Migrate javax to jakarta Upgrade from Java 11 to 17 Simplify and update logback config