@@ -7,7 +7,6 @@ import lombok.experimental.UtilityClass;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import static de.webalf.slotbot.util.eventfield.EventFieldUtils.buildOptionalLink;
@@ -37,7 +36,7 @@ public final class EventFieldAssembler {
 
 		return StreamSupport.stream(dtos.spliterator(), false)
 				.map(EventFieldAssembler::fromDto)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	private static EventFieldReferencelessDto toReferencelessDto(EventField eventField) {
@@ -52,6 +51,6 @@ public final class EventFieldAssembler {
 	public static List<EventFieldReferencelessDto> toReferencelessDtoList(Iterable<? extends EventField> eventFields) {
 		return StreamSupport.stream(eventFields.spliterator(), false)
 				.map(EventFieldAssembler::toReferencelessDto)
-				.collect(Collectors.toList());
+				.toList();
 	}
 }
