@@ -5,7 +5,6 @@ import de.webalf.slotbot.model.dtos.EventTypeDto;
 import lombok.experimental.UtilityClass;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 /**
@@ -35,6 +34,6 @@ public final class EventTypeAssembler {
 	public static List<EventTypeDto> toDtoList(Iterable<? extends EventType> eventTypes) {
 		return StreamSupport.stream(eventTypes.spliterator(), false)
 				.map(EventTypeAssembler::toDto)
-				.collect(Collectors.toList());
+				.toList();
 	}
 }
