@@ -9,7 +9,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 /**
@@ -40,12 +39,12 @@ public class SquadApiAssembler {
 	public static List<SquadApiDto> toDtoList(Iterable<? extends Squad> squadList) {
 		return StreamSupport.stream(squadList.spliterator(), false)
 				.map(SquadApiAssembler::toDto)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	public List<SquadApiViewDto> toViewDtoList(Iterable<? extends Squad> squadList) {
 		return StreamSupport.stream(squadList.spliterator(), false)
 				.map(this::toViewDto)
-				.collect(Collectors.toList());
+				.toList();
 	}
 }
